--- a/Frequency Prediction.ipynb
+++ b/Frequency Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "9206a492",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "883ce563",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "e7749fa6",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "53           54                    223"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "264077f9",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "940300c5",
    "metadata": {
     "scrolled": true
@@ -769,7 +769,7 @@
        "44           45                    191"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "16255052",
    "metadata": {},
    "outputs": [],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "14c4cb0a",
    "metadata": {
     "scrolled": false
@@ -995,7 +995,7 @@
        "[3438 rows x 10 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "5da71df1",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1197,7 @@
        "[3438 rows x 9 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "0f30c684",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "cdebc83a",
    "metadata": {},
    "outputs": [],
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "f3017449",
    "metadata": {},
    "outputs": [
@@ -1253,6 +1253,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Lotto Texas</th>\n",
        "      <th>Month</th>\n",
        "      <th>Day</th>\n",
        "      <th>Year</th>\n",
@@ -1267,6 +1268,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>11</td>\n",
        "      <td>18</td>\n",
        "      <td>1992</td>\n",
@@ -1279,6 +1281,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>11</td>\n",
        "      <td>21</td>\n",
        "      <td>1992</td>\n",
@@ -1291,6 +1294,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>11</td>\n",
        "      <td>25</td>\n",
        "      <td>1992</td>\n",
@@ -1303,6 +1307,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>11</td>\n",
        "      <td>28</td>\n",
        "      <td>1992</td>\n",
@@ -1315,6 +1320,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>12</td>\n",
        "      <td>2</td>\n",
        "      <td>1992</td>\n",
@@ -1336,9 +1342,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3433</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>5</td>\n",
        "      <td>25</td>\n",
        "      <td>2024</td>\n",
@@ -1351,6 +1359,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3434</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>5</td>\n",
        "      <td>27</td>\n",
        "      <td>2024</td>\n",
@@ -1363,6 +1372,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3435</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>5</td>\n",
        "      <td>29</td>\n",
        "      <td>2024</td>\n",
@@ -1375,6 +1385,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3436</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>2024</td>\n",
@@ -1387,6 +1398,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3437</th>\n",
+       "      <td>Lotto Texas</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>2024</td>\n",
@@ -1399,27 +1411,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3438 rows × 9 columns</p>\n",
+       "<p>3438 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Month  Day  Year   A   B   C   D   E   F\n",
-       "0        11   18  1992  27  31  39  44  45  47\n",
-       "1        11   21  1992  11  21  24  28  31  46\n",
-       "2        11   25  1992  14  21  36  39  40  42\n",
-       "3        11   28  1992   9  17  21  24  28  50\n",
-       "4        12    2  1992   5  17  19  25  26  38\n",
-       "...     ...  ...   ...  ..  ..  ..  ..  ..  ..\n",
-       "3433      5   25  2024  51  44  26  28  15  31\n",
-       "3434      5   27  2024  11  50  17  43  29  32\n",
-       "3435      5   29  2024  20   7  45  40  10  25\n",
-       "3436      6    1  2024  31   2  40  20  21   3\n",
-       "3437      6    3  2024  39  38  20  32  45  17\n",
+       "      Lotto Texas  Month  Day  Year   A   B   C   D   E   F\n",
+       "0     Lotto Texas     11   18  1992  27  31  39  44  45  47\n",
+       "1     Lotto Texas     11   21  1992  11  21  24  28  31  46\n",
+       "2     Lotto Texas     11   25  1992  14  21  36  39  40  42\n",
+       "3     Lotto Texas     11   28  1992   9  17  21  24  28  50\n",
+       "4     Lotto Texas     12    2  1992   5  17  19  25  26  38\n",
+       "...           ...    ...  ...   ...  ..  ..  ..  ..  ..  ..\n",
+       "3433  Lotto Texas      5   25  2024  51  44  26  28  15  31\n",
+       "3434  Lotto Texas      5   27  2024  11  50  17  43  29  32\n",
+       "3435  Lotto Texas      5   29  2024  20   7  45  40  10  25\n",
+       "3436  Lotto Texas      6    1  2024  31   2  40  20  21   3\n",
+       "3437  Lotto Texas      6    3  2024  39  38  20  32  45  17\n",
        "\n",
-       "[3438 rows x 9 columns]"
+       "[3438 rows x 10 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "cdbd6856",
    "metadata": {
     "scrolled": true
@@ -1794,7 +1806,7 @@
        "44           45                    191"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "85bba45b",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "a0103343",
    "metadata": {},
    "outputs": [],
