--- a/Probability Prediction.ipynb
+++ b/Probability Prediction.ipynb
@@ -1603,8 +1603,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "40a2aaf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type='text/css'>\n",
+       ".datatable table.frame { margin-bottom: 0; }\n",
+       ".datatable table.frame thead { border-bottom: none; }\n",
+       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
+       ".datatable .bool    { background: #DDDD99; }\n",
+       ".datatable .object  { background: #565656; }\n",
+       ".datatable .int     { background: #5D9E5D; }\n",
+       ".datatable .float   { background: #4040CC; }\n",
+       ".datatable .str     { background: #CC4040; }\n",
+       ".datatable .time    { background: #40CC40; }\n",
+       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
+       ".datatable .frame tbody td { text-align: left; }\n",
+       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
+       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
+       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
+       ".datatable .sp {  opacity: 0.25;}\n",
+       ".datatable .footer { font-size: 9px; }\n",
+       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import datatable as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5376dc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class='datatable'>\n",
+       "  <table class='frame'>\n",
+       "  <thead>\n",
+       "    <tr class='colnames'><td class='row_index'></td><th>C0</th><th>C1</th><th>C2</th><th>C3</th><th>C4</th><th>C5</th><th>C6</th><th>C7</th><th>C8</th><th>C9</th></tr>\n",
+       "    <tr class='coltypes'><td class='row_index'></td><td class='str' title='str32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td><td class='int' title='int32'>&#x25AA;&#x25AA;&#x25AA;&#x25AA;</td></tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr><td class='row_index'>0</td><td>Lotto Texas</td><td>11</td><td>14</td><td>1992</td><td>13</td><td>16</td><td>22</td><td>29</td><td>32</td><td>36</td></tr>\n",
+       "    <tr><td class='row_index'>1</td><td>Lotto Texas</td><td>11</td><td>18</td><td>1992</td><td>27</td><td>31</td><td>39</td><td>44</td><td>45</td><td>47</td></tr>\n",
+       "    <tr><td class='row_index'>2</td><td>Lotto Texas</td><td>11</td><td>21</td><td>1992</td><td>11</td><td>21</td><td>24</td><td>28</td><td>31</td><td>46</td></tr>\n",
+       "    <tr><td class='row_index'>3</td><td>Lotto Texas</td><td>11</td><td>25</td><td>1992</td><td>14</td><td>21</td><td>36</td><td>39</td><td>40</td><td>42</td></tr>\n",
+       "    <tr><td class='row_index'>4</td><td>Lotto Texas</td><td>11</td><td>28</td><td>1992</td><td>9</td><td>17</td><td>21</td><td>24</td><td>28</td><td>50</td></tr>\n",
+       "    <tr><td class='row_index'>5</td><td>Lotto Texas</td><td>12</td><td>2</td><td>1992</td><td>5</td><td>17</td><td>19</td><td>25</td><td>26</td><td>38</td></tr>\n",
+       "    <tr><td class='row_index'>6</td><td>Lotto Texas</td><td>12</td><td>5</td><td>1992</td><td>7</td><td>23</td><td>24</td><td>35</td><td>36</td><td>45</td></tr>\n",
+       "    <tr><td class='row_index'>7</td><td>Lotto Texas</td><td>12</td><td>9</td><td>1992</td><td>4</td><td>11</td><td>16</td><td>31</td><td>32</td><td>45</td></tr>\n",
+       "    <tr><td class='row_index'>8</td><td>Lotto Texas</td><td>12</td><td>12</td><td>1992</td><td>18</td><td>23</td><td>25</td><td>26</td><td>38</td><td>42</td></tr>\n",
+       "    <tr><td class='row_index'>9</td><td>Lotto Texas</td><td>12</td><td>16</td><td>1992</td><td>14</td><td>23</td><td>24</td><td>31</td><td>38</td><td>42</td></tr>\n",
+       "    <tr><td class='row_index'>10</td><td>Lotto Texas</td><td>12</td><td>19</td><td>1992</td><td>9</td><td>15</td><td>21</td><td>23</td><td>33</td><td>37</td></tr>\n",
+       "    <tr><td class='row_index'>11</td><td>Lotto Texas</td><td>12</td><td>23</td><td>1992</td><td>9</td><td>12</td><td>13</td><td>32</td><td>37</td><td>46</td></tr>\n",
+       "    <tr><td class='row_index'>12</td><td>Lotto Texas</td><td>12</td><td>26</td><td>1992</td><td>5</td><td>17</td><td>21</td><td>23</td><td>26</td><td>38</td></tr>\n",
+       "    <tr><td class='row_index'>13</td><td>Lotto Texas</td><td>12</td><td>30</td><td>1992</td><td>3</td><td>29</td><td>38</td><td>39</td><td>47</td><td>48</td></tr>\n",
+       "    <tr><td class='row_index'>14</td><td>Lotto Texas</td><td>1</td><td>2</td><td>1993</td><td>5</td><td>14</td><td>19</td><td>20</td><td>42</td><td>45</td></tr>\n",
+       "    <tr><td class='row_index'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td><td class='hellipsis'>&#x22EE;</td></tr>\n",
+       "    <tr><td class='row_index'>3434</td><td>Lotto Texas</td><td>5</td><td>25</td><td>2024</td><td>51</td><td>44</td><td>26</td><td>28</td><td>15</td><td>31</td></tr>\n",
+       "    <tr><td class='row_index'>3435</td><td>Lotto Texas</td><td>5</td><td>27</td><td>2024</td><td>11</td><td>50</td><td>17</td><td>43</td><td>29</td><td>32</td></tr>\n",
+       "    <tr><td class='row_index'>3436</td><td>Lotto Texas</td><td>5</td><td>29</td><td>2024</td><td>20</td><td>7</td><td>45</td><td>40</td><td>10</td><td>25</td></tr>\n",
+       "    <tr><td class='row_index'>3437</td><td>Lotto Texas</td><td>6</td><td>1</td><td>2024</td><td>31</td><td>2</td><td>40</td><td>20</td><td>21</td><td>3</td></tr>\n",
+       "    <tr><td class='row_index'>3438</td><td>Lotto Texas</td><td>6</td><td>3</td><td>2024</td><td>39</td><td>38</td><td>20</td><td>32</td><td>45</td><td>17</td></tr>\n",
+       "  </tbody>\n",
+       "  </table>\n",
+       "  <div class='footer'>\n",
+       "    <div class='frame_dimensions'>3439 rows &times; 10 columns</div>\n",
+       "  </div>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<Frame#2a41d977030 3439x10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.fread(\"lottotexas.csv\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a1204b6",
    "metadata": {},
    "outputs": [],
    "source": []
