running new function for predictions

--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[3536 rows x 10 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[3536 rows x 9 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "[3536 rows x 7 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,20 +892,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8 32 33 31 19  9]\n",
-      " [46 45 44 43 38 11]\n",
-      " [41 44 43  1 13 20]\n",
+      "[[11 20 32 45 26  6]\n",
+      " [30 27 15  7 50 43]\n",
+      " [25 16 37 52 27 14]\n",
       " ...\n",
-      " [35  6  3 14 24 49]\n",
-      " [37 24 44  8 46  3]\n",
-      " [27 35 22 51  6 36]]\n"
+      " [ 1 50 53  8 37 42]\n",
+      " [42  6 21  3 47  2]\n",
+      " [14 23  8 44 29 40]]\n"
      ]
     }
    ],
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -923,11 +923,11 @@
      "output_type": "stream",
      "text": [
       "Daily Lottery Numbers (2025-01-16):\n",
-      "Draw 1: [11 13 16 17 29 47]\n",
-      "Draw 2: [ 1  3 31 33 38 46]\n",
-      "Draw 3: [10 13 22 25 30 49]\n",
-      "Draw 4: [ 6 13 35 36 44 49]\n",
-      "Draw 5: [ 5 10 13 27 44 53]\n"
+      "Draw 1: [ 1  4  5  9 20 30]\n",
+      "Draw 2: [ 3  5 18 34 35 44]\n",
+      "Draw 3: [ 8 18 20 22 29 30]\n",
+      "Draw 4: [ 8  9 19 21 33 49]\n",
+      "Draw 5: [ 1 10 18 44 48 53]\n"
      ]
     }
    ],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -957,11 +957,34 @@
      "output_type": "stream",
      "text": [
       "Daily Lottery Numbers (2025-01-16):\n",
-      "Draw 1: [ 5 11 24 25 30 49]\n",
-      "Draw 2: [ 1 17 21 28 40 53]\n",
-      "Draw 3: [ 2 12 26 31 50 52]\n",
-      "Draw 4: [ 5 14 16 34 40 50]\n",
-      "Draw 5: [ 2  4 30 35 41 53]\n"
+      "Draw 1: [ 7 16 21 22 26 35]\n",
+      "Draw 2: [36 37 40 48 51 52]\n",
+      "Draw 3: [ 6 12 32 33 40 41]\n",
+      "Draw 4: [ 1  6 17 19 23 43]\n",
+      "Draw 5: [ 2  5  6 11 34 52]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate 5 draws for today\n",
+    "generate_daily_draws()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daily Lottery Numbers (2025-01-16):\n",
+      "Draw 1: [ 2 16 26 35 43 53]\n",
+      "Draw 2: [ 3  9 16 27 33 44]\n",
+      "Draw 3: [ 7  9 20 27 36 45]\n",
+      "Draw 4: [ 6  9 11 31 35 52]\n",
+      "Draw 5: [ 1 10 17 36 38 51]\n"
      ]
     }
    ],
