lotto predictions for 17Jan2025

--- a/predictions.ipynb
+++ b/predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[3536 rows x 10 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "[3536 rows x 9 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "[3536 rows x 7 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,19 +915,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daily Lottery Numbers (2025-01-16):\n",
-      "Draw 1: [ 1  4  5  9 20 30]\n",
-      "Draw 2: [ 3  5 18 34 35 44]\n",
-      "Draw 3: [ 8 18 20 22 29 30]\n",
-      "Draw 4: [ 8  9 19 21 33 49]\n",
-      "Draw 5: [ 1 10 18 44 48 53]\n"
+      "Daily Lottery Numbers (2025-01-17):\n",
+      "Draw 1: [10 27 32 38 39 51]\n",
+      "Draw 2: [11 24 33 47 49 53]\n",
+      "Draw 3: [ 7  9 12 16 38 46]\n",
+      "Draw 4: [ 2 10 17 30 35 47]\n",
+      "Draw 5: [ 9 21 32 36 42 46]\n"
      ]
     }
    ],
@@ -985,6 +985,29 @@
       "Draw 3: [ 7  9 20 27 36 45]\n",
       "Draw 4: [ 6  9 11 31 35 52]\n",
       "Draw 5: [ 1 10 17 36 38 51]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate 5 draws for today\n",
+    "generate_daily_draws()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daily Lottery Numbers (2025-01-17):\n",
+      "Draw 1: [35 40 42 43 49 52]\n",
+      "Draw 2: [ 6 28 29 39 42 45]\n",
+      "Draw 3: [ 2  6  8 26 28 48]\n",
+      "Draw 4: [ 1  4 10 18 35 48]\n",
+      "Draw 5: [ 3 20 23 26 31 34]\n"
      ]
     }
    ],
